# eta

./: .hlint.yaml  LICENSE  eta.cabal
src/: Eta.hs
test/: Spec.hs
