name:                eta
version:             0.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wygulmage/eta#readme
license:             BSD3
license-file:        LICENSE
author:              keith
maintainer:          example@example.com
copyright:           2022 keith
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Eta
  build-depends:       base >= 4 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wygulmage/eta
