name:                eta
version:             0.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wygulmage/eta#readme
license:             BSD3
license-file:        LICENSE
author:              keith wygant
maintainer:          example@example.com
copyright:           2022 keith wygant
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Eta
  build-depends:       base >= 4 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wygulmage/eta

test-suite test
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: eta, base >= 4 && < 5
  type: exitcode-stdio-1.0